:recycle: refactor: textarea e mudanças de estilo

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <main>
       <div class="col-left">
         <div class="col-left-content">
-          <input type="text" placeholder="Digite seu texto" />
-
+          <textarea placeholder="Digite o seu texto aqui"></textarea>
+          
           <div class="col-left-footer">
             <div class="text-info">
               <img
@@ -55,10 +55,12 @@
 
     <footer>
       <div class="footer-content">
-        Desenvolvido por
-        <a href="https://linkedin.com/in/jusceliadesouza" target="_blank"
-          >Juscélia de Souza</a
-        >
+        <span>
+          Desenvolvido com 💙 por
+          <a href="https://linkedin.com/in/jusceliadesouza" target="_blank"
+            >Juscélia de Souza</a
+          >
+        </span>
       </div>
     </footer>
   </body>
