:sparkles: feat: add sizes.css para responsividade

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./src/styles/styles.css" />
     <link rel="stylesheet" href="./src/styles/buttons.css" />
     <link rel="stylesheet" href="./src/styles/inputs.css" />
+    <link rel="stylesheet" href="./src/styles/sizes.css" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
